--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,31 +5,59 @@
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.example.camera.MainActivity">
+<!--    下面是Zxing版本得-->
+<!--    <cn.bingoogolapple.qrcode.zxing.ZXingView-->
+<!--        android:id="@+id/zxingview"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent"-->
 
-    <cn.bingoogolapple.qrcode.zxing.ZXingView
-        android:id="@+id/zxingview"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+<!--        app:qrcv_animTime="1000"-->
+<!--        app:qrcv_borderColor="@android:color/white"-->
+<!--        app:qrcv_borderSize="1px"-->
+<!--        app:qrcv_cornerColor="@android:color/holo_green_light"-->
+<!--        app:qrcv_cornerLength="20dp"-->
+<!--        app:qrcv_cornerSize="5dp"-->
+<!--        app:qrcv_isShowDefaultScanLineDrawable="true"-->
+<!--        app:qrcv_isShowTipTextAsSingleLine="true"-->
+<!--        app:qrcv_isTipTextBelowRect="true"-->
+<!--        app:qrcv_maskColor="#64000000"-->
 
+<!--        app:qrcv_qrCodeTipText="将二维码放入框内，自动扫描"-->
+<!--        app:qrcv_rectWidth="200dp"-->
+<!--        app:qrcv_scanLineColor="@android:color/holo_green_light"-->
+<!--        app:qrcv_scanLineSize="2dp"-->
+
+<!--        app:qrcv_tipTextColor="@android:color/white"-->
+<!--        app:qrcv_tipTextMargin="15dp"-->
+<!--        app:qrcv_tipTextSize="18dp" />-->
+    <!--    下面是Zbar版本得-->
+    <cn.bingoogolapple.qrcode.zbar.ZBarView
+        android:id="@+id/zbarview"
+        style="@style/MatchMatch"
         app:qrcv_animTime="1000"
+        app:qrcv_barCodeTipText="将条码放入框内，即可自动扫描"
+        app:qrcv_barcodeRectHeight="120dp"
         app:qrcv_borderColor="@android:color/white"
-        app:qrcv_borderSize="1px"
-        app:qrcv_cornerColor="@android:color/holo_green_light"
+        app:qrcv_borderSize="1dp"
+        app:qrcv_cornerColor="@color/colorPrimaryDark"
         app:qrcv_cornerLength="20dp"
-        app:qrcv_cornerSize="5dp"
+        app:qrcv_cornerSize="3dp"
+        app:qrcv_isAutoZoom="true"
+        app:qrcv_isBarcode="false"
+        app:qrcv_isOnlyDecodeScanBoxArea="false"
+        app:qrcv_isShowDefaultGridScanLineDrawable="true"
         app:qrcv_isShowDefaultScanLineDrawable="true"
-        app:qrcv_isShowTipTextAsSingleLine="true"
-        app:qrcv_isTipTextBelowRect="true"
-        app:qrcv_maskColor="#64000000"
-
-        app:qrcv_qrCodeTipText="将二维码放入框内，自动扫描"
+        app:qrcv_isShowLocationPoint="true"
+        app:qrcv_isShowTipBackground="true"
+        app:qrcv_isShowTipTextAsSingleLine="false"
+        app:qrcv_isTipTextBelowRect="false"
+        app:qrcv_maskColor="#33FFFFFF"
+        app:qrcv_qrCodeTipText="将二维码/条码放入框内，即可自动扫描"
         app:qrcv_rectWidth="200dp"
-        app:qrcv_scanLineColor="@android:color/holo_green_light"
-        app:qrcv_scanLineSize="2dp"
-
-        app:qrcv_tipTextColor="@android:color/white"
-        app:qrcv_tipTextMargin="15dp"
-        app:qrcv_tipTextSize="18dp" />
+        app:qrcv_scanLineColor="@color/colorPrimaryDark"
+        app:qrcv_toolbarHeight="56dp"
+        app:qrcv_topOffset="80dp"
+        app:qrcv_verticalBias="-1" />
 
     <LinearLayout
         android:layout_width="wrap_content"
