--- a/app/src/main/res/layout/view_control.xml
+++ b/app/src/main/res/layout/view_control.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<cn.bingoogolapple.flowlayout.BGAFlowLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     style="@style/MatchWrap"
     android:layout_alignParentBottom="true"
-    android:padding="4dp">
+    android:padding="4dp"
+    app:fl_horizontalChildGap="4dp"
+    app:fl_isDistributionWhiteSpacing="true"
+    app:fl_verticalChildGap="4dp">
 
     <TextView
         android:id="@+id/start_preview"
@@ -110,4 +113,4 @@
         android:id="@+id/choose_qrcde_from_gallery"
         style="@style/WrapWrapTv"
         android:text="识别图片中的码" />
-</RelativeLayout>
+</cn.bingoogolapple.flowlayout.BGAFlowLayout>
