--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -16,8 +16,10 @@
         <item name="android:textColor">@android:color/white</item>
         <item name="android:gravity">center</item>
         <item name="android:background">@drawable/selector_btn_orange</item>
-        <item name="android:onClick">onClick</item>
         <item name="android:padding">4dp</item>
+    </style>
+    <style name="OnClick">
+        <item name="android:clickable">true</item>
     </style>
 
 
