--- a/app/src/main/res/drawable/selector_btn_orange.xml
+++ b/app/src/main/res/drawable/selector_btn_orange.xml
@@ -1,16 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_pressed="true">
-        <shape android:shape="rectangle">
-            <solid android:color="@color/colorPrimaryDarkTrans" />
-            <corners android:radius="5dp" />
-        </shape>
-    </item>
+<!--    <item android:state_pressed="true">-->
+<!--        <shape android:shape="rectangle">-->
+<!--            <solid android:color="@color/colorPrimaryDarkTrans" />-->
+<!--            <corners android:radius="5dp" />-->
+<!--        </shape>-->
+<!--    </item>-->
     <item>
-        <shape android:shape="rectangle">
-            <solid android:color="@color/colorPrimaryDark" />
-            <corners android:radius="5dp" />
+        <shape xmlns:android="http://schemas.android.com/apk/res/android">
+            <solid android:color="#80858175" />
+            <stroke android:width="1dip" android:color="#aea594" />
+            <solid android:color="@color/colorPrimaryDarkTrans" />
+            <corners android:radius="20dp" android:bottomLeftRadius="12dp" android:bottomRightRadius="12dp" android:topLeftRadius="12dp" android:topRightRadius="12dp" />
         </shape>
     </item>
+
+
+    <!--    <item>-->
+    <!--        <shape android:shape="rectangle">-->
+    <!--            <solid android:color="@color/colorPrimaryDark" />-->
+    <!--            <corners android:radius="5dp" />-->
+    <!--        </shape>-->
+    <!--    </item>-->
+
 
 </selector>
