--- a/app/src/main/res/layout/activity_test_scan.xml
+++ b/app/src/main/res/layout/activity_test_scan.xml
@@ -18,7 +18,7 @@
         app:qrcv_customScanLineDrawable="@drawable/scan_icon_scanline"
         app:qrcv_isAutoZoom="true"
         app:qrcv_isBarcode="false"
-        app:qrcv_isOnlyDecodeScanBoxArea="false"
+        app:qrcv_isOnlyDecodeScanBoxArea="true"
         app:qrcv_isScanLineReverse="true"
         app:qrcv_isShowDefaultGridScanLineDrawable="false"
         app:qrcv_isShowDefaultScanLineDrawable="true"
@@ -28,17 +28,17 @@
         app:qrcv_isTipTextBelowRect="false"
         app:qrcv_maskColor="#33FFFFFF"
         app:qrcv_qrCodeTipText="将二维码/条码放入框内，即可自动扫描"
-        app:qrcv_rectWidth="200dp"
+        app:qrcv_rectWidth="245dp"
         app:qrcv_scanLineColor="@color/colorPrimaryDark"
         app:qrcv_scanLineMargin="0dp"
         app:qrcv_scanLineSize="0.5dp"
         app:qrcv_tipTextColor="@android:color/white"
         app:qrcv_tipTextSize="12sp"
         app:qrcv_toolbarHeight="56dp"
-        app:qrcv_topOffset="65dp"
-        app:qrcv_verticalBias="-1" />
+        app:qrcv_topOffset="108dp"
+        app:qrcv_verticalBias="-1">
 
-    <include layout="@layout/toolbar" />
+        <include layout="@layout/view_control" />
+    </cn.bingoogolapple.qrcode.zxing.ZXingView>
 
-    <include layout="@layout/view_control" />
 </RelativeLayout>
