--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,7 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="windowNoTitle">true</item>
     </style>
     <style name="MatchMatch">
         <item name="android:layout_width">match_parent</item>
@@ -17,7 +18,7 @@
         <item name="android:gravity">center</item>
         <item name="android:background">@drawable/selector_btn_orange</item>
         <item name="android:onClick">onClick</item>
-        <item name="android:padding">4dp</item>
+        <!--<item name="android:padding">4dp</item>-->
     </style>
 
 
