--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,9 +19,7 @@
         android:id="@+id/go"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="300dp"
-        android:layout_marginLeft="160dp"
-        android:layout_gravity="center"
+        android:layout_centerInParent="true"
         android:text="GO-SCAN" />
 
 </RelativeLayout>
